[package]
name        = "a_r_backend"
version     = "0.1.0"
edition     = "2024"

[dependencies]
hyper = { version = "1.8.1",  features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
hyper-rustls = "0.27.7"
dotenv_codegen = "0.15.0"
