[package]
name        = "a_r_backend"
version     = "0.1.0"
edition     = "2024"

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
const_format = { version = "0.2.35", features = ["rust_1_83"] }
dotenvy_macro = "0.15.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
